--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 	<title>Day 2</title>
 </head>
 <body>
-<script type="text/javascript" src="average.js"></script>
+<h1>Loops</h1>
+<!-- <script type="text/javascript" src="average.js"></script> -->
 <script type="text/javascript" src="maxMin.js"></script>
-<script type="text/javascript" src="switch.js"></script>
+<!-- <script type="text/javascript" src="switch.js"></script> -->
 </body>
 </html>
