--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 <body>
 <h1>Loops</h1>
 <!-- <script type="text/javascript" src="average.js"></script> -->
-<script type="text/javascript" src="maxMin.js"></script>
-<!-- <script type="text/javascript" src="switch.js"></script> -->
+<!-- <script type="text/javascript" src="maxMin.js"></script> -->
+ <!-- <script type="text/javascript" src="switch.js"></script> -->
+<!--  <script type="text/javascript" src="highFunctions.js"></script>
+ --> 
+ <script type="text/javascript" src="highFunctions2.js"></script>
+
 </body>
 </html>
